--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Data-Definition Language
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.config.import = env.properties
