refactor: renamed from 'file name' to 'image'.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=hotelnow
 spring.datasource.url=jdbc:postgresql://localhost:5432/hotelnow
 spring.datasource.username=postgres
 spring.datasource.password=12345
-spring.file.dir = src/main/java/com/tobeto/java4a/hotelnow/uploads/photo
+spring.image.dir = src/main/java/com/tobeto/java4a/hotelnow/images
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Data-Definition Language
