--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.application.name=hotelnow
 spring.datasource.url=jdbc:postgresql://localhost:5432/hotelnow
 spring.datasource.username=postgres
 spring.datasource.password=12345
-spring.image.dir = src/main/java/com/tobeto/java4a/hotelnow/images
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Data-Definition Language
@@ -10,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.config.import = env.properties
+
+spring.image.dir = src/main/java/com/tobeto/java4a/hotelnow/images
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
