feat: configure swagger-ui to display endpoint groups sorted & collapsed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.jpa.show-sql=true
 
 spring.config.import = env.properties
 
+springdoc.swagger-ui.docExpansion=none
+springdoc.swagger-ui.tagsSorter=alpha
+
 spring.image.dir = src/main/java/com/tobeto/java4a/hotelnow/images
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
