--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ springdoc.swagger-ui.tagsSorter=alpha
 spring.image.dir = src/main/java/com/tobeto/java4a/hotelnow/images
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+currency.tcmb.endpoint=https://www.tcmb.gov.tr/kurlar/today.xml
